@@ -1,3 +1,9 @@
+2002-09-23  Roland McGrath  <roland@redhat.com>
+
+	* tst-xlocale1.c (main): int -> size_t for counter.
+	* tst-xlocale2.c (do_test): Likewise.
+	* tst-ctype.c (main): Likewise.
+
 2002-09-22  Bruno Haible  <bruno@clisp.org>
 
 	* charmaps/TSCII: New file.
