@@ -1,5 +1,9 @@
 2002-09-24  Roland McGrath  <roland@redhat.com>
 
+	* sysdeps/mach/hurd/Versions (ld: GLIBC_2.0): Move __libc_read,
+	__libc_write, __libc_lseek64, to ...
+	(ld: GLIBC_PRIVATE): ... here.
+
 	* csu/Versions: Use %include <tls.h> to get USE_TLS defined.
 	(libc: GLIBC_2.0) [USE_TLS && HAVE___THREAD]: Remove _errno, errno.
 	(libc: GLIBC_2.3) [USE_TLS && HAVE___THREAD]: Put errno here instead.
